--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -17,6 +17,11 @@
   },
   "dependencies": {
     "@heroicons/react": "~2.1.5",
+    "@heroui/button": "^2.2.22",
+    "@heroui/form": "^2.1.21",
+    "@heroui/input": "^2.4.22",
+    "@heroui/system": "2.4.18",
+    "@heroui/theme": "2.4.17",
     "@rainbow-me/rainbowkit": "2.2.7",
     "@tanstack/react-query": "~5.59.15",
     "@uniswap/sdk-core": "~5.8.2",
@@ -24,13 +29,14 @@
     "blo": "~1.2.0",
     "burner-connector": "0.0.16",
     "daisyui": "5.0.9",
+    "framer-motion": "12.23.0",
     "kubo-rpc-client": "~5.0.2",
     "next": "~15.2.3",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
     "qrcode.react": "~4.0.1",
-    "react": "~19.0.0",
-    "react-dom": "~19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hot-toast": "~2.4.0",
     "usehooks-ts": "~3.1.0",
     "viem": "2.31.1",
