--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,9 @@
 [submodule "packages/foundry/lib/erc-2535-study"]
 	path = packages/foundry/lib/erc-2535-study
 	url = https://github.com/jacksmithinsulander/erc-2535-study
+[submodule "packages/foundry/lib/diamond-1-hardhat"]
+	path = packages/foundry/lib/diamond-1-hardhat
+	url = https://github.com/mudgen/diamond-1-hardhat
+[submodule "packages/foundry/lib/openzeppelin-contracts-upgradeable"]
+	path = packages/foundry/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
